# ezagent

./: .gitignore  PRD.md  README.md  development.md  pyproject.toml
ezagent/: agent.py  cli.py  config.py  daemon.py  external.py  scaffold.py
ezagent/llm/: __init__.py  anthropic.py  base.py  google.py
ezagent/tools/: manager.py
ezagent/tools/builtins/: __init__.py
ezagent/tools/builtins/filesystem/: main.py  requirements.txt
ezagent/tools/builtins/http/: main.py
ezagent/tools/builtins/memory/: main.py  requirements.txt
ezagent/tools/builtins/web_search/: main.py  requirements.txt
