[project]
name = "ezagent"
version = "0.1.0"
description = "Low-code AI agent creation SDK using Anthropic API and FastMCP"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "anthropic>=0.39",
    "fastmcp<3",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
ez = "ezagent.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
