[project]
name = "ezagent"
version = "0.1.0"
description = "Low-code AI agent creation SDK using Anthropic API and FastMCP"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "anthropic>=0.39",
    "google-genai>=1.0",
    "fastmcp<3",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "croniter>=1.3",
]

[project.optional-dependencies]
memory = [
    "pymilvus[milvus_lite]>=2.4",
    "sentence-transformers>=2.2",
]

[project.scripts]
ez = "ezagent.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
